dataset1235/2025-2/1153765216/users/230013788/executions/2747719322_2667036473.log
== SUBMISSION (2025-08-21 19:05:58)
-- CODE: 
tempc = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:10:24)
-- CODE: 
tempC = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:06:27)
-- CODE: 
tempc = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:05:59)
-- CODE: 
tempc = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:10:24)
-- CODE: 
tempC = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Temperatura em Celsius:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Temperatura em Celsius:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Temperatura em Celsius:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Temperatura em Celsius:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Temperatura em Celsius:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Temperatura em Celsius:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:06:26)
-- CODE: 
tempc = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:06:27)
-- CODE: 
tempc = float(input("Temperatura em Celsius:"))
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    tempK = tempC + 273.15
            ^^^^^
NameError: name 'tempC' is not defined. Did you mean: 'tempc'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
